--- a/custom_components/automate/translations/en.json
+++ b/custom_components/automate/translations/en.json
@@ -1,19 +1,19 @@
 {
-  "config": {
-    "abort": {
-      "already_configured": "A Pulse Hub at this address is already configured"
-    },
-    "error": {
-      "cannot_connect": "Can not connect / invalid response from Hub",
-      "unknown": "Unknown error communicating with Hub"
-    },
-    "step": {
-      "user": {
-        "data": {
-          "host": "IP Address / Hostname"
+    "config": {
+        "abort": {
+            "already_configured": "Device is already configured"
+        },
+        "error": {
+            "cannot_connect": "Failed to connect",
+            "invalid_auth": "Invalid authentication",
+            "unknown": "Unexpected error"
+        },
+        "step": {
+            "user": {
+                "data": {
+                    "host": "Host"
+                }
+            }
         }
-      }
     }
-  },
-  "title": "Automate Pulse Hub v2"
 }
